--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/index-faa0150d.js"></script>
-    <link rel="stylesheet" href="/index-efc073c3.css">
+    <script type="module" crossorigin src="./index-2038fa20.js"></script>
+    <link rel="modulepreload" crossorigin href="./react-67fe9742.js">
+    <link rel="modulepreload" crossorigin href="./mermaid-120b84ec.js">
+    <link rel="modulepreload" crossorigin href="./reactflow-a852bfd5.js">
+    <link rel="modulepreload" crossorigin href="./spectacle-a94c6cee.js">
+    <link rel="stylesheet" href="./index-efc073c3.css">
   </head>
   <body>
     <div id="root"></div>
